--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
     background-color:   rgb(236, 204, 20);
     width: 17%;
     height: 15%;
+    font-size: smaller;
     padding: 2% 5%;
     border-radius: 2% 4%;
     margin: 2.5% 5% ;
